🛠️refactor: 폰의 움직임 반환 메서드 분리